# logan-virtual-legalops

./: .env.example  .gitignore  ASSUMPTIONS.md  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: Dockerfile  celerybeat-schedule  pyproject.toml  qa_test.py  railway.toml  seed_agents.py  test_secondary_modules.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_time_entries_and_notifications.py
apps/api/app/: main.py
apps/api/app/core/: agent_bus.py  agent_dispatch.py  agent_runtime.py  anthropic_client.py  audit_middleware.py  chilean_legal.py  config.py  database.py  email.py  escalation.py  exceptions.py  file_validator.py  logging.py  middleware.py  pdf_generator.py  permissions.py  rate_limiter.py  security.py  storage.py  workflows.py
apps/api/app/core/agent_tools/: __init__.py  communication.py  document.py  financial.py  judicial.py  legal.py  notarial.py  system.py
apps/api/app/db/: base.py  enums.py  seed.py  session.py
apps/api/app/db/models/: __init__.py  ai_agent.py  ai_agent_conversation.py  ai_agent_skill.py  ai_agent_task.py  audit_log.py  client.py  collection_case.py  communication.py  contract.py  court_action.py  deadline.py  document.py  email_ticket.py  invoice.py  lead.py  mandate.py  matter.py  notary_document.py  notification.py  organization.py  proposal.py  scraper.py  task.py  template.py  time_entry.py  user.py
apps/api/app/integrations/: calendar_sync.py  firma_electronica.py  pjud.py  sii.py
apps/api/app/modules/admin/: router.py  schemas.py  service.py
apps/api/app/modules/agent_logs/: router.py  schemas.py  service.py
apps/api/app/modules/agents/: router.py  schemas.py  service.py  websocket.py
apps/api/app/modules/ai_assistant/: provider.py  router.py  schemas.py  service.py
apps/api/app/modules/auth/: router.py  schemas.py  service.py
apps/api/app/modules/calendar/: router.py  schemas.py  service.py
apps/api/app/modules/case_review/: router.py  schemas.py  service.py
apps/api/app/modules/clients/: router.py  schemas.py  service.py
apps/api/app/modules/collections/: router.py  schemas.py  service.py
apps/api/app/modules/communications/: router.py  schemas.py  service.py
apps/api/app/modules/contracts/: router.py  schemas.py  service.py
apps/api/app/modules/court_actions/: router.py  schemas.py  service.py
apps/api/app/modules/dashboards/: router.py  schemas.py  service.py
apps/api/app/tasks/: agent_bus_tasks.py  agent_health_tasks.py  celery_app.py  collection_tasks.py  digest_tasks.py  notary_tasks.py  proposal_tasks.py  sla_tasks.py
apps/api/tests/: conftest.py  test_agent_bus.py  test_agent_runtime.py  test_agent_tools.py  test_agents_api.py  test_ai_assistant.py  test_auth.py  test_clients.py  test_collections.py  test_contracts.py  test_dashboard.py  test_email_tickets.py  test_escalation.py  test_leads.py  test_matters.py  test_notary.py  test_proposals.py  test_reports.py  test_search.py  test_security.py  test_tasks_module.py
(+121 files in other folders)
