[project]
name = "logan-virtual-api"
version = "0.2.0"
description = "Logan Virtual - LegalOps OS Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "Jinja2>=3.1.0",
    "aiosmtplib>=3.0.0",
    "email-validator>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    # Phase 1: Security
    "slowapi>=0.1.9",
    # Phase 3: PDF generation
    "reportlab>=4.0.0",
    # Phase 3: S3 storage
    "boto3>=1.34.0",
    # Phase 5: Monitoring
    "sentry-sdk[fastapi]>=2.0.0",
    "prometheus-client>=0.20.0",
    # Async Redis for WebSocket notifications
    "redis[hiredis]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "factory-boy>=3.3.0",
    "pip-audit>=2.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "S104", "S105", "S106"]  # Allow assert, binding to all interfaces, hardcoded passwords in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"
